cmake_minimum_required(VERSION 3.10)
project(GardenSimulator)

set(CMAKE_CXX_STANDARD 17)

include_directories(.)

add_executable(GardenSimulator
        Garden/Garden.cpp
        Garden/Garden.h
        Settings/Settings.h
        Simulator.cpp
        Simulator.h
        Gardener/Gardener.cpp
        Gardener/Gardener.h
        Commands/Command.h
        Commands/TimeCommands/AdvanceCmd.cpp
        Commands/TimeCommands/AdvanceCmd.h
        Commands/InfoCommands/ListPlantsCmd.cpp
        Commands/InfoCommands/ListPlantsCmd.h
        Commands/InfoCommands/ListPlantCmd.cpp
        Commands/InfoCommands/ListPlantCmd.h
        Commands/InfoCommands/ListAreaCmd.cpp
        Commands/InfoCommands/ListAreaCmd.h
        Commands/InfoCommands/ListSoilCmd.cpp
        Commands/InfoCommands/ListSoilCmd.h
        Commands/InfoCommands/ListToolsCmd.cpp

        Commands/InfoCommands/ListToolsCmd.h
        Commands/InfoCommands/HelpCmd.cpp
        Commands/InfoCommands/HelpCmd.h
        Commands/ActionCommands/HarvestCmd.cpp
        Commands/ActionCommands/HarvestCmd.h
        Commands/ActionCommands/PlantCmd.cpp
        Commands/ActionCommands/PlantCmd.h
        Commands/ActionCommands/DropCmd.cpp
        Commands/ActionCommands/DropCmd.h
        Commands/ActionCommands/PickUpCmd.cpp
        Commands/ActionCommands/PickUpCmd.h
        Commands/ActionCommands/BuyCmd.cpp
        Commands/ActionCommands/BuyCmd.h
        Commands/MovementCommands/LeftCmd.cpp
        Commands/MovementCommands/LeftCmd.h
        Commands/MovementCommands/RightCmd.cpp
        Commands/MovementCommands/RightCmd.h
        Commands/MovementCommands/UpCmd.cpp
        Commands/MovementCommands/UpCmd.h
        Commands/MovementCommands/DownCmd.cpp
        Commands/MovementCommands/DownCmd.h
        Commands/MovementCommands/EnterCmd.cpp
        Commands/MovementCommands/EnterCmd.h
        Commands/MovementCommands/LeaveCmd.cpp
        Commands/MovementCommands/LeaveCmd.h
        Commands/GeneralCommands/GardenCmd.cpp
        Commands/GeneralCommands/GardenCmd.h
        Commands/GeneralCommands/SaveCmd.cpp
        Commands/GeneralCommands/SaveCmd.h
        Commands/GeneralCommands/LoadCmd.cpp
        Commands/GeneralCommands/LoadCmd.h
        Commands/GeneralCommands/DeleteCmd.cpp
        Commands/GeneralCommands/DeleteCmd.h
        Commands/GeneralCommands/ExecuteCmd.cpp
        Commands/GeneralCommands/ExecuteCmd.h
        Commands/GeneralCommands/ExitCmd.cpp
        Commands/GeneralCommands/ExitCmd.h
        Tools/Tool.cpp
        Tools/Tool.h
        Plants/Plant.cpp
        Plants/Plant.h
        Plants/Type/Cactus.cpp
        Plants/Type/Cactus.h
        Plants/Type/Rose.cpp
        Plants/Type/Rose.h
        Plants/Type/Weed.cpp
        Plants/Type/Weed.h
        Plants/Type/ExoticPlant.cpp
        Plants/Type/ExoticPlant.h
        Commands/CommandFactory.h
        Commands/CommandFactory.cpp
        Tools/Type/WateringCan.cpp
        Tools/Type/WateringCan.h
        Tools/Type/Fertilizer.cpp
        Tools/Type/Fertilizer.h
        Tools/Type/Shears.cpp
        Tools/Type/Shears.h
        Tools/Type/ToolZ.cpp
        Tools/Type/ToolZ.h
        Garden/Soil.cpp
        Garden/Soil.h
        Settings/Random.cpp
        Settings/Random.h
        main.cpp
        Commands/InfoCommands/HelpCmd.cpp
        Commands/InfoCommands/HelpCmd.h)
